# yoloscript

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TYPEINFERENCE_IMPLEMENTATION.md
.github/: copilot-instructions.md
docs/: README.MD
docs/.obsidian/: workspace.json
docs/00-PROCESS/: AGENT-GUIDE.md  PROCESS.md  README.MD  TASK-CONVENTION.md
docs/01-SPEC/: BACKLOG.md  LANGUAGE-SPEC.md  README.MD
docs/02-ARCHITECTURE/: INTERPRETER-DESIGN.md  README.MD
docs/02-ARCHITECTURE/decisions/: 0002-interpreter-architecture.md
docs/03-COMPONENTS/: README.md
docs/03-PLANNING/: PHASE-01-POC.md  PHASE-02-STABILISATION.md  PHASE-03-PRODUCTION.md
docs/04-PLANNING/: MEDIUM-TERM-PLAN.md  README.md
docs/05-TASKS/: 0000-template.md  README.md
docs/Yolang/: PROCESS.md
tests/: 03_functions_and_closures.yolo  README.md
tree-walk-interpreter/: Cargo.toml
tree-walk-interpreter/src/: grammar.pest  main.rs
tree-walk-interpreter/src/ast/: mod.rs
tree-walk-interpreter/src/error/: mod.rs
tree-walk-interpreter/src/evaluator/: mod.rs
tree-walk-interpreter/src/parser/: mod.rs
tree-walk-interpreter/src/typechecker/: mod.rs
tree-walk-interpreter/src/typed_ast/: mod.rs
tree-walk-interpreter/src/typeinference/: mod.rs
tree-walk-interpreter/src/types/: mod.rs
tree-walk-interpreter/tests/: typeinference_tests.rs
tree-walk-interpreter/tests/test_programs/inference/: stage2_04_else_if.yolo
tree-walk-interpreter/tests/typechecking/: typechecking_tests.rs
tree-walk-interpreter/tests/typechecking/sources/: stage6_06_cast.yolo  stage6_neg_04_cast_string.yolo
(+38 files in other folders)
